--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,11 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 62,5%;
 }
-
+.floatfix:after{
+	content:'';
+	display: block;
+	clear: both;
+}
 .contener {
 	width: 80%;
 	max-width: 1100px;
@@ -60,4 +64,52 @@ header nav ul li a:hover {
 	background:#7cb029;
 	color: #fff;
 	
+}
+
+/*------MENU-SWITCH------*/
+.switch {
+	display: none;
+	background-color: #7cb029;
+	color: #fff;
+	padding: 10px 15px;
+	float: right;
+	font-size: 1.4em;
+	text-decoration: none;
+}
+
+/*------MAX-WIDTH 1024------*/
+
+@media screen and (max-width: 1024px) {
+	.contener {
+		width: 90%;
+	}
+}
+
+/*------MAX-WIDTH 768------*/
+
+@media screen and (max-width: 768px) {
+	.contener {
+		width: 95%;
+	}
+	header nav {
+		width: 100%
+		
+	}
+}
+
+/*------MAX-WIDTH 480------*/
+
+@media screen and (max-width: 480px) {
+	.contener {
+		width: 100%;
+	}
+	header nav ul li {
+		display: block;
+		width: 100%
+	}
+	header nav ul li a {
+		height: 40px;
+		line-height: 40px;
+		border-bottom: 1px solid #7cb029;
+	}
 }
